// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoneybadgerDrop Page Renders correctly with connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-10 makeStyles-root-1 MuiContainer-maxWidthLg-16"
  >
    <div
      class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41 MuiGrid-justify-xs-center-36"
    >
      <div
        class="MuiGrid-root-18 makeStyles-headerContainer-2 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="makeStyles-headerContainer-122"
        >
          <div
            class="makeStyles-headerContent-123"
          >
            <h2
              class="MuiTypography-root-124 MuiTypography-h2-130 MuiTypography-colorTextPrimary-149"
            >
              HONEY DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
            >
              MEME Honey Pot 2 - Diamond Hands
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-121"
          >
            <div
              class="MuiInputBase-root-181 MuiOutlinedInput-root-166 MuiInputBase-colorSecondary-190 MuiOutlinedInput-colorSecondary-167 makeStyles-gasSelector-154 MuiInputBase-adornedStart-185 MuiOutlinedInput-adornedStart-170"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176 MuiInputBase-inputAdornedStart-196 MuiOutlinedInput-inputAdornedStart-179"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-165"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-213"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 makeStyles-walletButton-219 MuiButton-containedSecondary-230 MuiButton-disableElevation-231"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-221"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-245 MuiButton-iconSizeMedium-247"
                >
                  <div
                    class="makeStyles-walletDot-216 makeStyles-greenDot-218"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-5-45 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="MuiGrid-root-18 makeStyles-centerText-4 MuiGrid-container-19 MuiGrid-item-20 MuiGrid-justify-xs-center-36 MuiGrid-grid-xs-12-64"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-8-74 MuiGrid-grid-md-7-87"
          >
            <div
              class="MuiPaper-root-252 makeStyles-mainPapers-5 MuiPaper-elevation0-255 MuiPaper-rounded-253"
            >
              <div
                class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41"
              >
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <p
                    class="MuiTypography-root-124 MuiTypography-body1-126"
                  >
                    Remaining Honey Pot Pool
                  </p>
                </div>
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <h5
                    class="MuiTypography-root-124 MuiTypography-h5-133 MuiTypography-colorTextPrimary-149"
                  >
                    <span
                      class="MuiSkeleton-root-280 MuiSkeleton-text-281 MuiSkeleton-pulse-284"
                      style="width: 30%; margin: auto;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <h6
                    class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
                  >
                    <span
                      class="MuiSkeleton-root-280 MuiSkeleton-text-281 MuiSkeleton-pulse-284"
                      style="width: 30%; margin: auto;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <h6
                    class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
                  >
                    <span
                      class="MuiSkeleton-root-280 MuiSkeleton-text-281 MuiSkeleton-pulse-284"
                      style="width: 30%; margin: auto;"
                    />
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-item-20 MuiGrid-justify-xs-center-36 MuiGrid-grid-xs-12-64"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-18 makeStyles-holdingsTitle-8 MuiGrid-container-19 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
          >
            <p
              class="MuiTypography-root-124 MuiTypography-body1-126"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-8-48 MuiGrid-item-20 MuiGrid-justify-xs-space-between-38 MuiGrid-grid-xs-12-64"
          >
            <div
              class="MuiGrid-root-18 makeStyles-nftContainer-7 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-6-72 MuiGrid-grid-lg-4-98"
            >
              <span
                class="MuiSkeleton-root-280 MuiSkeleton-rect-282 makeStyles-nftSkeleton-9 MuiSkeleton-pulse-284"
                style="width: 100%; height: 250px;"
              />
            </div>
            <div
              class="MuiGrid-root-18 makeStyles-nftContainer-7 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-6-72 MuiGrid-grid-lg-4-98"
            >
              <span
                class="MuiSkeleton-root-280 MuiSkeleton-rect-282 makeStyles-nftSkeleton-9 MuiSkeleton-pulse-284"
                style="width: 100%; height: 250px;"
              />
            </div>
            <div
              class="MuiGrid-root-18 makeStyles-nftContainer-7 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-6-72 MuiGrid-grid-lg-4-98"
            >
              <span
                class="MuiSkeleton-root-280 MuiSkeleton-rect-282 makeStyles-nftSkeleton-9 MuiSkeleton-pulse-284"
                style="width: 100%; height: 250px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly with connected address and a balance of NFTs 1`] = `
<div>
  <div
    class="MuiContainer-root-10 makeStyles-root-1 MuiContainer-maxWidthLg-16"
  >
    <div
      class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41 MuiGrid-justify-xs-center-36"
    >
      <div
        class="MuiGrid-root-18 makeStyles-headerContainer-2 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="makeStyles-headerContainer-122"
        >
          <div
            class="makeStyles-headerContent-123"
          >
            <h2
              class="MuiTypography-root-124 MuiTypography-h2-130 MuiTypography-colorTextPrimary-149"
            >
              HONEY DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
            >
              MEME Honey Pot 2 - Diamond Hands
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-121"
          >
            <div
              class="MuiInputBase-root-181 MuiOutlinedInput-root-166 MuiInputBase-colorSecondary-190 MuiOutlinedInput-colorSecondary-167 makeStyles-gasSelector-154 MuiInputBase-adornedStart-185 MuiOutlinedInput-adornedStart-170"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176 MuiInputBase-inputAdornedStart-196 MuiOutlinedInput-inputAdornedStart-179"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-165"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-213"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 makeStyles-walletButton-219 MuiButton-containedSecondary-230 MuiButton-disableElevation-231"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-221"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-245 MuiButton-iconSizeMedium-247"
                >
                  <div
                    class="makeStyles-walletDot-216 makeStyles-greenDot-218"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-291"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-5-45 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="MuiGrid-root-18 makeStyles-centerText-4 MuiGrid-container-19 MuiGrid-item-20 MuiGrid-justify-xs-center-36 MuiGrid-grid-xs-12-64"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-8-74 MuiGrid-grid-md-7-87"
          >
            <div
              class="MuiPaper-root-252 makeStyles-mainPapers-5 MuiPaper-elevation0-255 MuiPaper-rounded-253"
            >
              <div
                class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41"
              >
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <p
                    class="MuiTypography-root-124 MuiTypography-body1-126"
                  >
                    Remaining Honey Pot Pool
                  </p>
                </div>
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <h5
                    class="MuiTypography-root-124 MuiTypography-h5-133 MuiTypography-colorTextPrimary-149"
                  >
                    <span
                      class="MuiSkeleton-root-280 MuiSkeleton-text-281 MuiSkeleton-pulse-284"
                      style="width: 30%; margin: auto;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <h6
                    class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
                  >
                    <span
                      class="MuiSkeleton-root-280 MuiSkeleton-text-281 MuiSkeleton-pulse-284"
                      style="width: 30%; margin: auto;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <h6
                    class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
                  >
                    <span
                      class="MuiSkeleton-root-280 MuiSkeleton-text-281 MuiSkeleton-pulse-284"
                      style="width: 30%; margin: auto;"
                    />
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-item-20 MuiGrid-justify-xs-center-36 MuiGrid-grid-xs-12-64"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-18 makeStyles-holdingsTitle-8 MuiGrid-container-19 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
          >
            <p
              class="MuiTypography-root-124 MuiTypography-body1-126"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-8-48 MuiGrid-item-20 MuiGrid-justify-xs-space-between-38 MuiGrid-grid-xs-12-64"
          >
            <div
              class="MuiGrid-root-18 makeStyles-nftContainer-7 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-6-72 MuiGrid-grid-lg-4-98"
            >
              <span
                class="MuiSkeleton-root-280 MuiSkeleton-rect-282 makeStyles-nftSkeleton-9 MuiSkeleton-pulse-284"
                style="width: 100%; height: 250px;"
              />
            </div>
            <div
              class="MuiGrid-root-18 makeStyles-nftContainer-7 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-6-72 MuiGrid-grid-lg-4-98"
            >
              <span
                class="MuiSkeleton-root-280 MuiSkeleton-rect-282 makeStyles-nftSkeleton-9 MuiSkeleton-pulse-284"
                style="width: 100%; height: 250px;"
              />
            </div>
            <div
              class="MuiGrid-root-18 makeStyles-nftContainer-7 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-6-72 MuiGrid-grid-lg-4-98"
            >
              <span
                class="MuiSkeleton-root-280 MuiSkeleton-rect-282 makeStyles-nftSkeleton-9 MuiSkeleton-pulse-284"
                style="width: 100%; height: 250px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly without connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-10 makeStyles-root-1 MuiContainer-maxWidthLg-16"
  >
    <div
      class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41 MuiGrid-justify-xs-center-36"
    >
      <div
        class="MuiGrid-root-18 makeStyles-headerContainer-2 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="makeStyles-headerContainer-122"
        >
          <div
            class="makeStyles-headerContent-123"
          >
            <h2
              class="MuiTypography-root-124 MuiTypography-h2-130 MuiTypography-colorTextPrimary-149"
            >
              HONEY DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-124 MuiTypography-subtitle1-135 MuiTypography-colorTextSecondary-150"
            >
              MEME Honey Pot 2 - Diamond Hands
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-121"
          >
            <div
              class="MuiInputBase-root-181 MuiOutlinedInput-root-166 MuiInputBase-colorSecondary-190 MuiOutlinedInput-colorSecondary-167 makeStyles-gasSelector-154 MuiInputBase-adornedStart-185 MuiOutlinedInput-adornedStart-170"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-155 MuiSelect-select-156 MuiSelect-selectMenu-159 MuiSelect-outlined-158 MuiInputBase-input-192 MuiOutlinedInput-input-176 MuiInputBase-inputAdornedStart-196 MuiOutlinedInput-inputAdornedStart-179"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-165"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-199 MuiSelect-icon-161 MuiSelect-iconOutlined-164"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline-175"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-213"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 makeStyles-walletButton-219 MuiButton-containedSecondary-230 MuiButton-disableElevation-231"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-221"
              >
                Click to connect
                <span
                  class="MuiButton-endIcon-245 MuiButton-iconSizeMedium-247"
                >
                  <div
                    class="makeStyles-walletDot-216 makeStyles-redDot-217"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-280"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-5-45 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
      >
        <div
          class="MuiGrid-root-18 makeStyles-centerText-4 MuiGrid-container-19 MuiGrid-item-20 MuiGrid-justify-xs-center-36 MuiGrid-grid-xs-12-64"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64 MuiGrid-grid-sm-8-74 MuiGrid-grid-md-7-87"
          >
            <div
              class="MuiPaper-root-252 makeStyles-mainPapers-5 MuiPaper-elevation0-255 MuiPaper-rounded-253"
            >
              <div
                class="MuiGrid-root-18 MuiGrid-container-19 MuiGrid-spacing-xs-1-41"
              >
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <p
                    class="MuiTypography-root-124 MuiTypography-body1-126"
                  >
                    Remaining Honey Pot Pool
                  </p>
                </div>
                
                <div
                  class="MuiGrid-root-18 MuiGrid-item-20 MuiGrid-grid-xs-12-64"
                >
                  <button
                    class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 makeStyles-redeemButton-6 MuiButton-containedPrimary-229"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-221"
                    >
                      Check Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-280"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
